unpackaged/main/default/objects/Revision__c/Revision__c.object-meta.xml
<CustomObject>
    <label>Revision</label>
    <nameField>
        <label>Revision</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Revisions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>