unpackaged/main/default/objects/Revision__c/fields/Additional_notes__c.field-meta.xml
<CustomField>
    <fullName>Additional_notes__c</fullName>
    <label>WB Additional notes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>