unpackaged/main/default/objects/Revision__c/fields/Additional_Revisions_date_time__c.field-meta.xml
<CustomField>
    <fullName>Additional_Revisions_date_time__c</fullName>
    <label>Additional Revisions Start Date</label>
    <type>DateTime</type>
</CustomField>