unpackaged/main/default/objects/Revision__c/fields/Additional_Revisions_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Additional_Revisions_End_Date__c</fullName>
    <label>Additional Revisions End Date</label>
    <type>DateTime</type>
</CustomField>