unpackaged/main/default/objects/Revision__c/fields/Agent_Assets__c.field-meta.xml
<CustomField>
    <fullName>Agent_Assets__c</fullName>
    <label>Agent Assets</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>