unpackaged/main/default/objects/Revision__c/fields/Agent_Subdomain__c.field-meta.xml
<CustomField>
    <fullName>Agent_Subdomain__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Agent Subdomain</label>
    <type>Checkbox</type>
</CustomField>