unpackaged/main/default/objects/Revision__c/fields/Blog_Assets__c.field-meta.xml
<CustomField>
    <fullName>Blog_Assets__c</fullName>
    <label>Blog Assets</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>