unpackaged/main/default/objects/Revision__c/fields/Client_satisfaction_with_our_product__c.field-meta.xml
<CustomField>
    <fullName>Client_satisfaction_with_our_product__c</fullName>
    <label>Client satisfaction with our product?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1- Very Dissatisfied</fullName>
            </value>
            <value>
                <fullName>2- Somewhat Dissatisfied</fullName>
            </value>
            <value>
                <fullName>3- Neutral</fullName>
            </value>
            <value>
                <fullName>4- Somewhat Satisfied</fullName>
            </value>
            <value>
                <fullName>5- Very Satisfied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>