unpackaged/main/default/objects/Revision__c/fields/Community_Assets__c.field-meta.xml
<CustomField>
    <fullName>Community_Assets__c</fullName>
    <label>Community Assets</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>