unpackaged/main/default/objects/Revision__c/fields/Company_Domain_Name__c.field-meta.xml
<CustomField>
    <fullName>Company_Domain_Name__c</fullName>
    <formula>Account__r.Company_domain_name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Company Domain Name</label>
    <type>Text</type>
</CustomField>