unpackaged/main/default/objects/Revision__c/fields/Content_Revision_Type__c.field-meta.xml
<CustomField>
    <fullName>Content_Revision_Type__c</fullName>
    <label>Content Revision Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rewrites</fullName>
            </value>
            <value>
                <fullName>Heavy Edits</fullName>
            </value>
            <value>
                <fullName>Medium Edits</fullName>
            </value>
            <value>
                <fullName>Light Edits</fullName>
            </value>
            <value>
                <fullName>Client Preference</fullName>
            </value>
            <value>
                <fullName>Internal Error</fullName>
            </value>
            <value>
                <fullName>Minor Edits</fullName>
            </value>
            <value>
                <fullName>Major Edits</fullName>
            </value>
            <value>
                <fullName>Client Notes Not Addressed</fullName>
                <isActive>false</isActive>
                <label>Client Notes Not Addressed</label>
            </value>
            <value>
                <fullName>Minor Changes</fullName>
                <isActive>false</isActive>
                <label>Minor Changes</label>
            </value>
            <value>
                <fullName>Other</fullName>
                <isActive>false</isActive>
                <label>Other</label>
            </value>
            <value>
                <fullName>Writer Error</fullName>
                <isActive>false</isActive>
                <label>Writer Error</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>