unpackaged/main/default/objects/Revision__c/fields/CRM_Analytics_Task_Required__c.field-meta.xml
<CustomField>
    <fullName>CRM_Analytics_Task_Required__c</fullName>
    <label>CRM/Analytics Task Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>