unpackaged/main/default/objects/Revision__c/fields/Data_specialist__c.field-meta.xml
<CustomField>
    <fullName>Data_specialist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Data specialist</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Revisions2</relationshipName>
    <type>Lookup</type>
</CustomField>