unpackaged/main/default/objects/Revision__c/fields/Design_Project_Associate__c.field-meta.xml
<CustomField>
    <fullName>Design_Project_Associate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Design Project Associate</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Revisions6</relationshipName>
    <type>Lookup</type>
</CustomField>