unpackaged/main/default/objects/Revision__c/fields/Design_project_coordinator__c.field-meta.xml
<CustomField>
    <fullName>Design_project_coordinator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Design Project Coordinator</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Revisions5</relationshipName>
    <type>Lookup</type>
</CustomField>