unpackaged/main/default/objects/Revision__c/fields/Design_template__c.field-meta.xml
<CustomField>
    <fullName>Design_template__c</fullName>
    <formula>Service__r.Design_Template__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Design template</label>
    <type>Text</type>
</CustomField>