unpackaged/main/default/objects/Revision__c/fields/Development_Assets__c.field-meta.xml
<CustomField>
    <fullName>Development_Assets__c</fullName>
    <label>Development Assets</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>