unpackaged/main/default/objects/Revision__c/fields/Done_date_time__c.field-meta.xml
<CustomField>
    <fullName>Done_date_time__c</fullName>
    <label>Done Start Date</label>
    <type>DateTime</type>
</CustomField>