unpackaged/main/default/objects/Revision__c/fields/Done_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Done_End_Date__c</fullName>
    <label>Done End Date</label>
    <type>DateTime</type>
</CustomField>