unpackaged/main/default/objects/Revision__c/fields/DS_Accuracy_Score__c.field-meta.xml
<CustomField>
    <fullName>DS_Accuracy_Score__c</fullName>
    <formula>CASE( DS_Accuracy__c , &quot;0&quot;, 0, &quot;1&quot;, 1, &quot;2&quot;, 2, &quot;3&quot;, 3,&quot;4&quot; , 4, 5)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Assigns a numerical value to DS Accuracy Score</inlineHelpText>
    <label>DS Accuracy Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>