unpackaged/main/default/objects/Revision__c/fields/DS_Additional_notes__c.field-meta.xml
<CustomField>
    <fullName>DS_Additional_notes__c</fullName>
    <label>DS Additional notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>