unpackaged/main/default/objects/Revision__c/fields/DS_Escalates_Technical_Issues__c.field-meta.xml
<CustomField>
    <fullName>DS_Escalates_Technical_Issues__c</fullName>
    <label>DS Escalates Technical Issues</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>