unpackaged/main/default/objects/Revision__c/fields/DS_Pod__c.field-meta.xml
<CustomField>
    <fullName>DS_Pod__c</fullName>
    <formula>TEXT( Data_specialist__r.Revisions_Pod__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DS Pod</label>
    <type>Text</type>
</CustomField>