unpackaged/main/default/objects/Revision__c/fields/Due_date__c.field-meta.xml
<CustomField>
    <fullName>Due_date__c</fullName>
    <formula>IF( RecordType.Name = &quot;Design Refresh&quot;, 

   CASE( 
    MOD( DATEVALUE(CreatedDate)  - DATE( 1900, 1, 7 ), 7 ),
    2,   CreatedDate + 6,
    3,   CreatedDate + 6,
    4,   CreatedDate + 6,
    5,   CreatedDate + 6,
    6,   CreatedDate + 5,
  CreatedDate + 4
    ),
 CASE( 
  MOD( DATEVALUE(CreatedDate) - DATE( 1900, 1, 7 ), 7 ),
  3, CreatedDate + 5,
  4, CreatedDate + 5,
  5, CreatedDate + 5,
  6, CreatedDate + 4,
  CreatedDate + 3
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Due date</label>
    <type>Date</type>
</CustomField>