unpackaged/main/default/objects/Revision__c/fields/Flagged_in_OOP__c.field-meta.xml
<CustomField>
    <fullName>Flagged_in_OOP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Flagged in OOP</label>
    <type>Checkbox</type>
</CustomField>