unpackaged/main/default/objects/Revision__c/fields/Footage_Type__c.field-meta.xml
<CustomField>
    <fullName>Footage_Type__c</fullName>
    <label>Footage Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Client Videos</fullName>
            </value>
            <value>
                <fullName>Client &amp; Stock Videos</fullName>
                <label>Client &amp; LP Stock Videos</label>
            </value>
            <value>
                <fullName>Stock Videos</fullName>
                <label>LP Stock Videos</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>