unpackaged/main/default/objects/Revision__c/fields/Google_Folder__c.field-meta.xml
<CustomField>
    <fullName>Google_Folder__c</fullName>
    <formula>Account__r.Client_Folder__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Google Folder</label>
    <type>Text</type>
</CustomField>