unpackaged/main/default/objects/Revision__c/fields/Header_image_curator__c.field-meta.xml
<CustomField>
    <fullName>Header_image_curator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Header image curator</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Revisions4</relationshipName>
    <type>Lookup</type>
</CustomField>