unpackaged/main/default/objects/Revision__c/fields/High_Touch__c.field-meta.xml
<CustomField>
    <fullName>High_Touch__c</fullName>
    <formula>Service_Schedule__r.High_Touch__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>High Touch</label>
    <type>Checkbox</type>
</CustomField>