unpackaged/main/default/objects/Revision__c/fields/How_much_room_to_improve__c.field-meta.xml
<CustomField>
    <fullName>How_much_room_to_improve__c</fullName>
    <label>Room to improve their view of LP?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 very unhappy, most room to improve</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3 Neutral, neither very happy or unhappy</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5 very happy, no room for improvement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>