unpackaged/main/default/objects/Revision__c/fields/IDX_Coordinator__c.field-meta.xml
<CustomField>
    <fullName>IDX_Coordinator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>IDX Coordinator</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Revisions7</relationshipName>
    <type>Lookup</type>
</CustomField>