unpackaged/main/default/objects/Revision__c/fields/Implementation_Manager__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Manager__c</fullName>
    <formula>( Service__r.Owner:User.FirstName &amp;&quot; &quot;&amp;  Service__r.Owner:User.LastName )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Onboarding Manager</label>
    <type>Text</type>
</CustomField>