unpackaged/main/default/objects/Revision__c/fields/In_progress_date_time__c.field-meta.xml
<CustomField>
    <fullName>In_progress_date_time__c</fullName>
    <label>In Progress Start Date</label>
    <type>DateTime</type>
</CustomField>