unpackaged/main/default/objects/Revision__c/fields/Internal_Revision_Score__c.field-meta.xml
<CustomField>
    <fullName>Internal_Revision_Score__c</fullName>
    <formula>CASE( Internal_Revision_Scoring__c, &quot;1: Very Unsatisfied&quot;, 1, &quot;2: Unsatisfied&quot;, 2, &quot;3: Neutral&quot;, 3, &quot;4: Satisfied&quot;, 4, 5)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Internal Revision Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>