unpackaged/main/default/objects/Revision__c/fields/Internal_Revision_Scoring__c.field-meta.xml
<CustomField>
    <fullName>Internal_Revision_Scoring__c</fullName>
    <label>Internal Revision Scoring</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1: Very Unsatisfied</fullName>
            </value>
            <value>
                <fullName>2: Unsatisfied</fullName>
            </value>
            <value>
                <fullName>3: Neutral</fullName>
            </value>
            <value>
                <fullName>4: Satisfied</fullName>
            </value>
            <value>
                <fullName>5: Very Satisfied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>