unpackaged/main/default/objects/Revision__c/fields/Marketing_Checklist__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Checklist__c</fullName>
    <formula>HYPERLINK( Service_Schedule__r.Marketing_Checklist__c , &quot;Marketing Checklist&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Marketing Checklist</label>
    <type>Text</type>
</CustomField>