unpackaged/main/default/objects/Revision__c/fields/Migration_Owner__c.field-meta.xml
<CustomField>
    <fullName>Migration_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Migration Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Revisions8</relationshipName>
    <type>Lookup</type>
</CustomField>