unpackaged/main/default/objects/Revision__c/fields/MLS_Request__c.field-meta.xml
<CustomField>
    <fullName>MLS_Request__c</fullName>
    <label>MLS Request</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Add Buyer Sync</fullName>
            </value>
            <value>
                <fullName>Remove Buyer Sync</fullName>
            </value>
            <value>
                <fullName>Double Listing - Remove one MLS</fullName>
            </value>
            <value>
                <fullName>Remove Agent Sync (Listing)</fullName>
            </value>
            <value>
                <fullName>Add Agent Sync (Listing)</fullName>
            </value>
            <value>
                <fullName>Add Listing Sync (Property)</fullName>
            </value>
            <value>
                <fullName>Remove Listing Sync (Property)</fullName>
            </value>
            <value>
                <fullName>Add Office Sync</fullName>
            </value>
            <value>
                <fullName>Remove Office Sync</fullName>
            </value>
            <value>
                <fullName>Check Sync Status</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>