unpackaged/main/default/objects/Revision__c/fields/New_end_date__c.field-meta.xml
<CustomField>
    <fullName>New_end_date__c</fullName>
    <label>New End Date</label>
    <type>DateTime</type>
</CustomField>