unpackaged/main/default/objects/Revision__c/fields/New_Stage_Time__c.field-meta.xml
<CustomField>
    <fullName>New_Stage_Time__c</fullName>
    <formula>(
ROUND( 8 * (
( 5 * FLOOR( ( DATEVALUE(  New_end_date__c  ) - DATE( 1900, 1, 8) ) / 7) +
MIN(5,
MOD( DATEVALUE( New_end_date__c) - DATE( 1900, 1, 8), 7) +
MIN( 1, 24 / 8 * ( MOD(New_end_date__c - DATETIMEVALUE( &#39;1900-01-08 16:00:00&#39; ), 1 ) ) )
)
)
-
( 5 * FLOOR( ( DATEVALUE(  New_Start_Date__c  ) - DATE( 1900, 1, 8) ) / 7) +
MIN( 5,
MOD( DATEVALUE( New_Start_Date__c ) - DATE( 1996, 1, 1), 7 ) +
MIN( 1, 24 / 8 * ( MOD( New_Start_Date__c - DATETIMEVALUE( &#39;1900-01-08 16:00:00&#39; ), 1) ) )
)
)
),
0 )
)/8</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New Stage Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>