unpackaged/main/default/objects/Revision__c/fields/Onboarding_Type__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Type__c</fullName>
    <description>Indicates whether the client is custom, IAO, or website launches</description>
    <formula>Service__r.RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Onboarding Type</label>
    <type>Text</type>
</CustomField>