unpackaged/main/default/objects/Revision__c/fields/PFT_Pod__c.field-meta.xml
<CustomField>
    <fullName>PFT_Pod__c</fullName>
    <formula>text( Service__r.Owner:User.PFT_Pod__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PFT Pod</label>
    <type>Text</type>
</CustomField>