unpackaged/main/default/objects/Revision__c/fields/Post_launch_score__c.field-meta.xml
<CustomField>
    <fullName>Post_launch_score__c</fullName>
    <label>Post-launch score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>