unpackaged/main/default/objects/Revision__c/fields/Pre_launch_score__c.field-meta.xml
<CustomField>
    <fullName>Pre_launch_score__c</fullName>
    <label>Pre-launch score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>