unpackaged/main/default/objects/Revision__c/fields/Press_Media_article_Assets__c.field-meta.xml
<CustomField>
    <fullName>Press_Media_article_Assets__c</fullName>
    <label>Press &amp; Media article Assets</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>