unpackaged/main/default/objects/Revision__c/fields/Property_Assets__c.field-meta.xml
<CustomField>
    <fullName>Property_Assets__c</fullName>
    <label>Property Assets</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>