unpackaged/main/default/objects/Revision__c/fields/QA__c.field-meta.xml
<CustomField>
    <fullName>QA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DS QA</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Revisions3</relationshipName>
    <type>Lookup</type>
</CustomField>