unpackaged/main/default/objects/Revision__c/fields/QA_Checklist__c.field-meta.xml
<CustomField>
    <fullName>QA_Checklist__c</fullName>
    <label>QA Checklist</label>
    <type>Url</type>
</CustomField>