unpackaged/main/default/objects/Revision__c/fields/Ready_for_QA_date_time__c.field-meta.xml
<CustomField>
    <fullName>Ready_for_QA_date_time__c</fullName>
    <label>Ready for QA Start Date</label>
    <type>DateTime</type>
</CustomField>