unpackaged/main/default/objects/Revision__c/fields/Ready_for_QA_End_date__c.field-meta.xml
<CustomField>
    <fullName>Ready_for_QA_End_date__c</fullName>
    <label>Ready for QA End date</label>
    <type>DateTime</type>
</CustomField>