unpackaged/main/default/objects/Revision__c/fields/Retention__c.field-meta.xml
<CustomField>
    <fullName>Retention__c</fullName>
    <formula>Service_Schedule__r.Retention__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Retention</label>
    <type>Checkbox</type>
</CustomField>