unpackaged/main/default/objects/Revision__c/fields/Revision_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Revision_Feedback__c</fullName>
    <label>Revision Feedback</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>